--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -50,6 +50,7 @@
         (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
         (outputUpdateItemText)="updateItemText($event)"
         (outputDeleteItem)="deleteItem($event)"
+        (outputMoveItem)="moveItem($event)"
       />
     } @else {
       <p class="empty-filter-msg">Nenhum item encontrado neste filtro.</p>
